--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "server/proxy-server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "build/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -15,10 +19,5 @@
       "src": "/(.*)",
       "dest": "/build/$1"
     }
-  ],
-  "functions": {
-    "server/proxy-server.js": {
-      "includeFiles": "build/**"
-    }
-  }
+  ]
 }
