--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "server/proxy-server.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "builds": [
     {
       "src": "server/proxy-server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "runtime": "nodejs20.x"
+      }
     },
     {
       "src": "build/**/*",
