🔧 Switch Vercel config to use npm instead of yarn
- Use npm ci/install to avoid yarn network timeouts
- npm is more reliable for Vercel deployments

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,6 @@
       "dest": "/build/$1"
     }
   ],
-  "installCommand": "yarn install",
-  "buildCommand": "yarn build"
+  "installCommand": "npm ci || npm install",
+  "buildCommand": "npm run build"
 }
