🔧 Fix Vercel deployment network timeout issues
- Force npm usage and disable yarn in Vercel config
- Add .npmrc to use standard npm registry (not Wix registry)
- Increase network timeouts to 600000ms
- Remove yarn.lock during build process
- Add environment variables for cache configuration

This should resolve the ETIMEDOUT errors from npm.dev.wixpress.com

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
       "dest": "/build/$1"
     }
   ],
-  "installCommand": "npm ci || npm install",
-  "buildCommand": "npm run build"
+  "installCommand": "rm -f yarn.lock && npm ci --prefer-offline --network-timeout=600000 || npm install --network-timeout=600000",
+  "buildCommand": "npm run build",
+  "env": {
+    "YARN_CACHE_FOLDER": "/tmp/.yarn",
+    "NPM_CONFIG_CACHE": "/tmp/.npm"
+  }
 }
